# sentinel

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  release.yml
cli/: Cargo.toml
cli/src/: logging.rs  main.rs
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/browser/: Cargo.toml
crates/browser/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  domain.rs  error.rs  lib.rs  ports.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
