[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/browser",
    "crates/ai",
    "crates/store",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kajiya-i/sentinel"
authors = ["The Sentinel Authors"]
# MVP ships as a single binary, not crates.io packages. Keeping the crates
# unpublished lets the internal path deps stay version-less (no per-release bump
# churn) and satisfies cargo-deny's allow-wildcard-paths. Flip per-crate if we
# ever publish to crates.io.
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

# External dependency versions are centralized here as crates start needing them.
[workspace.dependencies]
sentinel-core = { path = "crates/core" }
sentinel-browser = { path = "crates/browser" }
sentinel-ai = { path = "crates/ai" }
sentinel-store = { path = "crates/store" }

# Logging: the `cli` owns subscriber init; libraries only emit events (docs/rules/logging.md).
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Typed errors for library crates (docs/rules/error-handling.md). `anyhow` is cli-only.
thiserror = "2.0.18"

# Config: serde DTOs + maintained YAML fork (serde_yaml is unmaintained, RUSTSEC-2024-0370).
# `url` resolves relative check URLs against `defaults.base_url` at the config boundary.
serde = { version = "1.0.228", features = ["derive"] }
serde_norway = "0.9.42"
url = "2.5.8"

# Port traits: async_trait for dyn-safe/Send async ports (docs/rules/design.md §1).
# tokio is a dev-dependency for now (async tests); it becomes a real core dep with M1 orchestration.
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["macros", "rt"] }

# Browser adapter (CDP). `futures` drives the chromiumoxide handler stream; `serde_json`
# serializes the raw accessibility tree. chromiumoxide's only default feature is `bytes`
# (makes screenshots return `bytes::Bytes`); disabling it keeps `Vec<u8>` and pulls nothing
# extra. The tokio runtime is unconditional, so this does not affect it.
chromiumoxide = { version = "0.9.1", default-features = false }
futures = "0.3.32"
serde_json = "1.0.150"
# base64-encode mocked response bodies for CDP Fetch.fulfillRequest.
base64 = "0.22.1"
