[package]
name = "sentinel-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
sentinel-core.workspace = true
reqwest.workspace = true
serde = { workspace = true }
serde_json.workspace = true
base64.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true }
wiremock.workspace = true

[lints]
workspace = true
