[package]
name = "sentinel-browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
sentinel-core.workspace = true
chromiumoxide.workspace = true
tokio.workspace = true
futures.workspace = true
serde_json.workspace = true
async-trait.workspace = true
url.workspace = true
tracing.workspace = true

[lints]
workspace = true
