[package]
name = "sentinel-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_norway.workspace = true
url.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
